--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </header>
         
         <main class="main">
+            <h1>Chispita</h1>
             <section class="hero">
                 <div class="hero__descuento">
                     <i class="fa-solid fa-tag"></i>
@@ -164,7 +165,7 @@
         <footer class="footer">
             <section>
                 <p class="footer__text">&copy; 2025 - TUP 1 - Todos los derechos reservados</p>
-                <p class="footer__text">Autores: Cappeletti - Sanchez - Bausela</p>
+                <p class="footer__text">Autores: Cappelletti - Sanchez - Bausela</p>
             </section>
         </footer>
     </body>
