--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header class="header container">
+    <header class="header">
         <div class="header__envio">
             <p class="header__texto">Envío a todo el País!</p>
         </div>
@@ -32,19 +32,21 @@
             <div class="navbar__links">
                 <a href="index.html" class="navbar__link">Inicio</a>
                 <a href="#productos" class="navbar__link">Productos</a>
-                <a href="#" class="navbar__link">Formulario</a>
+                <a href="#form" class="navbar__link">Formulario</a>
             </div>
 
             <div class="navbar__container-logo">
-                <img src="assets/logo.png" alt="imgen logo" class="container-logo__img">
+                <img src="assets/logo2.png" alt="imgen logo" class="container-logo__img">
+
+                <h1 class="navbar__title">ChispitaSSJ</h1>
             </div>
 
-            <h1 class="navbar__title">ChispitaSSJ</h1>
+
 
             <div class="navbar__container-icons">
-                <i class="container-icons__icon fa-solid fa-magnifying-glass"></i>
-                <i class="container-icons__icon fa-solid fa-user"></i>
-                <i class="container-icons__icon fa-solid fa-cart-shopping"></i>
+                <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
+                <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
+                <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
                 <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
             </div>
         </nav>
@@ -68,7 +70,7 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="####" class="info__btn">Ver más</a>
+                        <a href="./pages/jordan4-1.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
 
@@ -151,32 +153,52 @@
             </div>
         </section>
 
-        <section class="form container">
+        <section id="form" class="form container">
             <h2 class="form__subtitle subtitle">Formulario</h2>
             <form class="form__form" action="#">
                 <fieldset class="form__fieldset">
-                    <legend class="form__legend">Datos Personales</legend>
-                    <div class="form__container">
-                        <label for="nombre" class="form__label">Nombre:</label>
-                        <input class="form__input" type="text" id="nombre" name="nombre" required placeholder="Tu nombre...">
+                    <div class="form__personal-contacts-container">
+                        <legend class="form__legend-datos form__legend">Datos Personales</legend>
+                        <div class="form__container">
+                            <label for="nombre" class="form__label">Nombre:</label>
+                            <input class="form__input" type="text" id="nombre" name="nombre" required
+                                placeholder="Tu nombre...">
+                        </div>
+
+                        <div class="form__container">
+                            <label for="apellido" class="form__label">Apellido:</label>
+                            <input class="form__input" type="text" id="apellido" name="apellido" required
+                                placeholder="Tu apellido...">
+                        </div>
+
+                        <div class="form__container">
+                            <label for="edad" class="form__label">Edad:</label>
+                            <input class="form__input" type="number" id="edad" name="edad" required
+                                placeholder="Tu edad...">
+                        </div>
                     </div>
 
-                    <div class="form__container">
-                        <label for="apellido" class="form__label">Apellido:</label>
-                    <input class="form__input" type="text" id="apellido" name="apellido" required placeholder="Tu apellido...">
+                    <div class="form__contact-container">
+                        <legend class="form__legend form__legend-contact">Contacto</legend>
+                        <div class="form__container">
+                            <label for="email" class="form__label">Email:</label>
+                            <input class="form__input" type="email" id="email" name="email" required
+                                placeholder="Tu email...">
+                        </div>
+
+
+                        <div class="form__container">
+                            <label for="telefono" class="form__label">Teléfono:</label>
+                            <input class="form__input" type="tel" id="telefono" name="telefono" required
+                                placeholder="Tu teléfono...">
+                        </div>
+
+                        <div class="form__container">
+                            <label for="direccion" class="form__label">Dirección:</label>
+                            <input class="form__input" type="text" id="direccion" name="direccion" required
+                                placeholder="Tu dirección...">
+                        </div>
                     </div>
-
-
-                    
-                    <label for="edad" class="form__label">Edad:</label>
-                    <input class="form__input" type="number" id="edad" name="edad" required placeholder="Tu edad...">
-                    <legend class="form__legend">Contacto</legend>
-                    <label for="email" class="form__label">Email:</label>
-                    <input class="form__input" type="email" id="email" name="email" required placeholder="Tu email...">
-                    <label for="telefono" class="form__label">Teléfono:</label>
-                    <input class="form__input" type="tel" id="telefono" name="telefono" required placeholder="Tu teléfono...">
-                    <label for="direccion" class="form__label">Dirección:</label>
-                    <input class="form__input" type="text" id="direccion" name="direccion" required placeholder="Tu dirección...">
                 </fieldset>
             </form>
             <div class="form__btns">
