--- a/index.html
+++ b/index.html
@@ -208,9 +208,10 @@
         </section>
     </main>
     <footer class="footer">
-        <section>
-            <p class="footer__text">&copy; 2025 - TUP 1 - Todos los derechos reservados</p>
-            <p class="footer__text">Autores: Cappelletti - Sanchez - Bausela</p>
+        <section class="footer__container">
+            <p class="footer__text">Rosario, Argentina</p>
+            <p class="footer__text">Copyright &copy; 2025 - Todos los derechos reservados</p>
+            <p class="footer__text">UTN FRRo | Cappelletti - Sanchez - Bausela</p>
         </section>
     </footer>
 
