--- a/index.html
+++ b/index.html
@@ -209,9 +209,18 @@
     </main>
     <footer class="footer">
         <section class="footer__container">
-            <p class="footer__text">Rosario, Argentina</p>
-            <p class="footer__text">Copyright &copy; 2025 - Todos los derechos reservados</p>
-            <p class="footer__text">UTN FRRo | Cappelletti - Sanchez - Bausela</p>
+            <p class="footer__text">Seguinos en nuestras redes</p>
+            <div class="footer__conteiner-icons">
+                <img src="assets/instagram.png" alt="instagram" class="footer__icons-icon">
+                <img src="assets/facebook.png" alt="facebook" class="footer__icons-icon">
+                <img src="assets/linkedin.png" alt="linkedin" class="footer__icons-icon">
+                <img src="assets/youtube.png" alt="youtube" class="footer__icons-icon">
+            </div>
+        </section>
+        <section class="footer__container">
+            <p class="footer__text">Contacto: info@chispassj.com</p>
+            <p class="footer__text">&copy; 2025 UTN | Todos los derechos reservados</p>
+            <p class="footer__text">Cappelletti - Sanchez - Bausela</p>
         </section>
     </footer>
 
