--- a/index.html
+++ b/index.html
@@ -208,23 +208,24 @@
         </section>
     </main>
     <footer class="footer">
-        <section class="footer__container">
-            <p class="footer__text">Seguinos en nuestras redes</p>
-            <div class="footer__conteiner-icons">
-                <img src="assets/instagram.png" alt="instagram" class="footer__icons-icon">
-                <img src="assets/facebook.png" alt="facebook" class="footer__icons-icon">
-                <img src="assets/linkedin.png" alt="linkedin" class="footer__icons-icon">
-                <img src="assets/youtube.png" alt="youtube" class="footer__icons-icon">
-            </div>
-        </section>
-        <section class="footer__container">
-            <p class="footer__text">Contacto: info@chispassj.com</p>
-            <p class="footer__text">&copy; 2025 UTN | Todos los derechos reservados</p>
-            <p class="footer__text">Cappelletti - Sanchez - Bausela</p>
-        </section>
+        <p class="footer__text footer__text-title-redes">Seguinos en nuestras redes:</p>
+
+        <div class="footer__container-links">
+            <a href="#"><i class="footer__icon fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="footer__icon fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="footer__icon fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="footer__icon fa-brands fa-youtube"></i></a>
+        </div>
+
+        <p class="footer__text">Contacto: info@chispassj.com</p>
+        <p class="footer__text">&copy; 2025 UTN | Todos los derechos reservados</p>
+        <p class="footer__text">Cappelletti - Sanchez - Bausela</p>
     </footer>
 
     <script src="js/js.js"></script>
 </body>
 
 </html>
+<!-- 
+
+iconos
