--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
                 <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
             </div>
+
+            <i class="navbar__close fa-solid fa-x"></i>
         </nav>
     </header>
 
@@ -70,7 +72,7 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="./pages/jordan4-1.html" target="_blank" class="info__btn">Ver más</a>
+                        <a href="./pages/producto-1.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
 
@@ -81,7 +83,7 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="####" class="info__btn">Ver más</a>
+                        <a href="./pages/producto-2.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
 
@@ -92,7 +94,7 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="####" class="info__btn">Ver más</a>
+                        <a href="./pages/producto-3.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
 
@@ -103,7 +105,7 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="####" class="info__btn">Ver más</a>
+                        <a href="./pages/producto-4.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
 
@@ -114,7 +116,7 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="####" class="info__btn">Ver más</a>
+                        <a href="./pages/producto-5.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
 
@@ -125,7 +127,7 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="####" class="info__btn">Ver más</a>
+                        <a href="./pages/producto-6.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
 
@@ -136,7 +138,7 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="####" class="info__btn">Ver más</a>
+                        <a href="./pages/producto-7.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
 
@@ -147,9 +149,13 @@
                     <div class="product__info">
                         <h3 class="info__titulo sub-subtitle">Jordan 4 Retro</h3>
                         <p class="info__price">$300</p>
-                        <a href="####" class="info__btn">Ver más</a>
+                        <a href="./pages/producto-8.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
                 </div>
+
+                
+
+                
             </div>
         </section>
 
