--- a/pages/producto-1.html
+++ b/pages/producto-1.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 
     <!-- Hoja de Estilos -->
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/productos.css">
 
     <!-- Iconos -->
     <script src="https://kit.fontawesome.com/b12aec4708.js" crossorigin="anonymous"></script>
@@ -32,16 +32,16 @@
             <div class="navbar__links">
                 <a href="index.html" class="navbar__link">Inicio</a>
                 <a href="#productos" class="navbar__link">Productos</a>
-                <a href="#" class="navbar__link">Formulario</a>
+                <a href="#form" class="navbar__link">Formulario</a>
             </div>
 
             <div class="navbar__container-logo">
-                <img src="assets/logo.png" alt="imgen logo" class="container-logo__img">
+                <img src="../assets/logo2.png" alt="imgen logo" class="container-logo__img">
 
                 <h1 class="navbar__title">ChispitaSSJ</h1>
             </div>
 
-            
+
 
             <div class="navbar__container-icons">
                 <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
@@ -49,17 +49,38 @@
                 <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
                 <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
             </div>
+
+            <i class="navbar__close fa-solid fa-x"></i>
         </nav>
     </header>
 
-    <main class="main">
-        
+    <main class="main container">
+        <div class="main__container">
+            <div class="container-img">
+                <img class="container-img__imagen" src="../assets/jordan4_1.jpeg" alt="imagen zapatilla">
+            </div>
+
+            <div class="container__descripcion">
+                <h3 class="descripcion__titulo">Jordan 4 Retro</h3>
+                <p class="descripcion__talle">44 - 45 - 46</p>
+                <p class="descripcion__precio">$300</p>
+            </div>
+        </div>
     </main>
+
     <footer class="footer">
-        <section>
-            <p class="footer__text">&copy; 2025 - TUP 1 - Todos los derechos reservados</p>
-            <p class="footer__text">Autores: Cappelletti - Sanchez - Bausela</p>
-        </section>
+        <p class="footer__text footer__text-title-redes">Seguinos en nuestras redes:</p>
+
+        <div class="footer__container-links">
+            <a href="#"><i class="footer__icon fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="footer__icon fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="footer__icon fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="footer__icon fa-brands fa-youtube"></i></a>
+        </div>
+
+        <p class="footer__text">Contacto: info@chispassj.com</p>
+        <p class="footer__text">&copy; 2025 UTN | Todos los derechos reservados</p>
+        <p class="footer__text">Cappelletti - Sanchez - Bausela</p>
     </footer>
 
     <script src="js/js.js"></script>
