Add API and Styles

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
         <section id="productos" class="grid container">
             <h2 class="grid__subtitle subtitle">Productos</h2>
-            <div class="grid__products">
-                <div class="container__product">
+            <div id="contenedor_productos" class="grid__products">
+                <!-- <div class="container__product">
                     <div class="product__container-img">
                         <img src="assets/jordan4_1.jpeg" alt="imagen zapatilla" class="container-img__imagen">
                     </div>
@@ -74,9 +74,9 @@
                         <p class="info__price">$300</p>
                         <a href="./pages/producto-1.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="container__product">
+                <!-- <div class="container__product">
                     <div class="product__container-img">
                         <img src="assets/jordan4_1.jpeg" alt="imagen zapatilla" class="container-img__imagen">
                     </div>
@@ -151,11 +151,7 @@
                         <p class="info__price">$300</p>
                         <a href="./pages/producto-8.html" target="_blank" class="info__btn">Ver más</a>
                     </div>
-                </div>
-
-                
-
-                
+                </div> -->
             </div>
         </section>
 
@@ -229,6 +225,7 @@
     </footer>
 
     <script src="js/js.js"></script>
+    <script src="js/productos-index.js"></script>
 </body>
 
 </html>
