--- a/pages/producto.html
+++ b/pages/producto.html
@@ -56,15 +56,7 @@
 
     <main class="main container">
         <div class="main__container">
-            <div class="container-img">
-                <img class="container-img__imagen" src="../assets/jordan4_1.jpeg" alt="imagen zapatilla">
-            </div>
 
-            <div class="container__descripcion">
-                <h3 class="descripcion__titulo">Jordan 4 Retro</h3>
-                <p class="descripcion__talle">44 - 45 - 46</p>
-                <p class="descripcion__precio">$300</p>
-            </div>
         </div>
     </main>
 
@@ -83,7 +75,8 @@
         <p class="footer__text">Cappelletti - Sanchez - Bausela</p>
     </footer>
 
-    <script src="js/js.js"></script>
+    <script src="../js/js.js"></script>
+    <script src="../js/product.js"></script>
 </body>
 
 </html>
