--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="footer__container">
 
                 </div>
-                <p class="footer_text footer_text-title-redes">Seguinos en nuestras redes:</p>
+                <p class="footer__text footer_text-title-redes">Seguinos en nuestras redes:</p>
 
                 <div class="footer__container-links">
                     <a href="#"><i class="footer__icon fa-brands fa-instagram"></i></a>
