--- a/pages/login.html
+++ b/pages/login.html
@@ -49,7 +49,9 @@
                 <div class="navbar__container-icons">
                     <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
-                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
+                    <a href="carrito.html">
+                        <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
+                    </a>
                     <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
                 </div>
 
