--- a/pages/register.html
+++ b/pages/register.html
@@ -49,9 +49,8 @@
                 <div class="navbar__container-icons">
                     <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
-                    <a href="carrito.html">
-                        <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
-                    </a>
+
+                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
                     <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
                 </div>
 
@@ -90,9 +89,11 @@
                         <div class="form__container--genero">
                             <label for="edad" class="form__label">Género:</label>
                             <div class="genero__container">
-                                <input class="form__input form__input--genero" type="checkbox" id="hombre" name="hombre" required">
+                                <input class="form__input form__input--genero" type="checkbox" id="hombre" name="hombre"
+                                    required">
                                 <label class="form__input--genero" for="hombre">Hombre</label>
-                                <input class="form__input form__input--genero" type="checkbox" id="mujer" name="mujer" required">
+                                <input class="form__input form__input--genero" type="checkbox" id="mujer" name="mujer"
+                                    required">
                                 <label class="form__input--genero" for="hombre">Hombre</label>
                             </div>
 
