--- a/pages/login.html
+++ b/pages/login.html
@@ -35,23 +35,16 @@
 
                 <div class="navbar__container-logo">
                     <img src="../assets/logo2.png" alt="imgen logo" class="container-logo__img">
-
                     <h1 class="navbar__title">ChispitaSSJ</h1>
                 </div>
 
-
-                <div class="navbar__links">
-                    <a href="index.html" class="navbar__link">Inicio</a>
-                    <a href="#productos" class="navbar__link">Productos</a>
-                    <a href="#form" class="navbar__link">Cuenta</a>
-                </div>
+                <i class="container-icons__icon modo-oscuro fa-solid fa-moon"></i>
 
                 <div class="navbar__container-icons">
+                    
                     <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
-
-                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
-
+                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping" id="icono-carrito"></i>
                     <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
                 </div>
 
@@ -72,7 +65,7 @@
                 </div>
 
                 <div class="login__btns">
-                    <button class="login__btn">Iniciar Sesión</button>
+                    <a href="../index.html" class="login__btn">Iniciar Sesión</a>
 
                     <a href="../pages/register.html" class="login__crear-cuenta">Crear cuenta</a>
                 </div>
