--- a/pages/producto.html
+++ b/pages/producto.html
@@ -34,24 +34,26 @@
 
 
                 <div class="navbar__container-logo">
-                    <img src="../assets/logo2.png" alt="imgen logo" class="container-logo__img">
+                    <img src="assets/logo2.png" alt="imgen logo" class="container-logo__img">
 
                     <h1 class="navbar__title">ChispitaSSJ</h1>
                 </div>
 
 
                 <div class="navbar__links">
-                    <a href="../index.html" class="navbar__link">Inicio</a>
+                    <a href="index.html" class="navbar__link">Inicio</a>
                     <a href="#productos" class="navbar__link">Productos</a>
-                    <a href="login.html" class="navbar__link">Cuenta</a>
-                </div>
+                    <a href="/pages/login.html" class="navbar__link">Cuenta</a>
+                    <a href="#" class="navbar__link" id="icono-carrito">Carrito</a>
+                </div>  
+
+                <i class="container-icons__icon modo-oscuro fa-solid fa-moon"></i>
 
                 <div class="navbar__container-icons">
+                    
                     <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
-
-                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
-
+                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping" id="icono-carrito"></i>
                     <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
                 </div>
 
