--- a/pages/register.html
+++ b/pages/register.html
@@ -39,18 +39,13 @@
                     <h1 class="navbar__title">ChispitaSSJ</h1>
                 </div>
 
-
-                <div class="navbar__links">
-                    <a href="index.html" class="navbar__link">Inicio</a>
-                    <a href="#productos" class="navbar__link">Productos</a>
-                    <a href="#form" class="navbar__link">Cuenta</a>
-                </div>
+                <i class="container-icons__icon modo-oscuro fa-solid fa-moon"></i>
 
                 <div class="navbar__container-icons">
+                    
                     <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
-
-                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping"></i>
+                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping" id="icono-carrito"></i>
                     <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
                 </div>
 
@@ -133,7 +128,7 @@
                 </fieldset>
                 <div class="form__btns">
                     <button href="#" class="form_btn form_btn-send">Registrarse</button>
-                    <a href="#" class="form__btn-crear-cuenta">¿Ya tienes una cuenta?</a>
+                    <a href="../pages/login.html" class="form__btn-crear-cuenta">¿Ya tienes una cuenta?</a>
                 </div>
             </form>
 
