Cart, Dark Mode, etc part ii

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -34,14 +34,14 @@
 
 
                 <div class="navbar__container-logo">
-                    <img src="assets/logo2.png" alt="imgen logo" class="container-logo__img">
+                    <img src="../assets/logo2.png" alt="imgen logo" class="container-logo__img">
 
                     <h1 class="navbar__title">ChispitaSSJ</h1>
                 </div>
 
 
                 <div class="navbar__links">
-                    <a href="index.html" class="navbar__link">Inicio</a>
+                    <a href="../index.html" class="navbar__link">Inicio</a>
                     <a href="#productos" class="navbar__link">Productos</a>
                     <a href="/pages/login.html" class="navbar__link">Cuenta</a>
                     <a href="#" class="navbar__link" id="icono-carrito">Carrito</a>
