--- a/pages/login.html
+++ b/pages/login.html
@@ -41,7 +41,7 @@
                 <i class="container-icons__icon modo-oscuro fa-solid fa-moon"></i>
 
                 <div class="navbar__container-icons">
-                    
+
                     <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping" id="icono-carrito"></i>
@@ -95,8 +95,8 @@
 
     </footer>
 
-    <script src="js/js.js"></script>
-    <script src="js/productos-index.js"></script>
+    <script src="../js/js.js"></script>
+    <script src="../js/product.js"></script>
 </body>
 
 </html>
