Cart Part III, MQ form login register

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
                 <div class="navbar__container-icons">
                     <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping" id="icono-carrito"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
-                    <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
+                    <a href="pages/login.html">
+
+                        <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
+                    </a>
                     <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
                 </div>
 
@@ -69,8 +72,8 @@
                         <tr>
                             <th>Imagen</th>
                             <th>Nombre</th>
-                            <th>Precio</th>
-                            <th>Cantidad</th>
+                            <th>$</th>
+                            <th>Cant.</th>
                         </tr>
                     </thead>
 
