--- a/pages/register.html
+++ b/pages/register.html
@@ -39,17 +39,29 @@
                     <h1 class="navbar__title">ChispitaSSJ</h1>
                 </div>
 
+
+                <div class="navbar__links">
+                    <a href="../index.html" class="navbar__link">Inicio</a>
+                    <a href="../index.html" class="navbar__link">Productos</a>
+                    <a href="..//pages/login.html" class="navbar__link">Cuenta</a>
+                    <a href="#" class="navbar__link" id="link-carrito">Carrito</a>
+
+                    <i class="navbar__close fa-solid fa-x"></i>
+
+                </div>
+
                 <i class="container-icons__icon modo-oscuro fa-solid fa-moon"></i>
 
                 <div class="navbar__container-icons">
-                    
-                    <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
-                    <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping" id="icono-carrito"></i>
+                    <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
+                    <a href="pages/login.html">
+
+                        <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
+                    </a>
                     <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
                 </div>
 
-                <i class="navbar__close fa-solid fa-x"></i>
             </nav>
         </div>
 
