--- a/pages/login.html
+++ b/pages/login.html
@@ -35,27 +35,40 @@
 
                 <div class="navbar__container-logo">
                     <img src="../assets/logo2.png" alt="imgen logo" class="container-logo__img">
+
                     <h1 class="navbar__title">ChispitaSSJ</h1>
+                </div>
+
+
+                <div class="navbar__links">
+                    <a href="../index.html" class="navbar__link">Inicio</a>
+                    <a href="../index.html" class="navbar__link">Productos</a>
+                    <a href="..//pages/login.html" class="navbar__link">Cuenta</a>
+                    <a href="#" class="navbar__link" id="link-carrito">Carrito</a>
+
+                    <i class="navbar__close fa-solid fa-x"></i>
+
                 </div>
 
                 <i class="container-icons__icon modo-oscuro fa-solid fa-moon"></i>
 
                 <div class="navbar__container-icons">
-
-                    <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
-                    <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping" id="icono-carrito"></i>
+                    <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
+                    <a href="pages/login.html">
+
+                        <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
+                    </a>
                     <i class="hamburguesa container-icons__icon fa-solid fa-bars"></i>
                 </div>
 
-                <i class="navbar__close fa-solid fa-x"></i>
             </nav>
         </div>
 
 
     </header>
 
-    <main class="main container">
+    <main class="main">
         <h2 class="main__titulo">Iniciar Sesión</h2>
         <div class="login__container">
             <form action="#" class="login__form">
