--- a/pages/producto.html
+++ b/pages/producto.html
@@ -43,19 +43,25 @@
                 <div class="navbar__links">
                     <a href="../index.html" class="navbar__link">Inicio</a>
                     <a href="../index.html" class="navbar__link">Productos</a>
-                    <a href="..//pages/login.html" class="navbar__link">Cuenta</a>
-                    <a href="#" class="navbar__link" id="link-carrito">Carrito</a>
+                    <a href="../pages/login.html" class="navbar__link">Cuenta</a>
+
 
                     <i class="navbar__close fa-solid fa-x"></i>
 
                 </div>
 
-                <i class="container-icons__icon modo-oscuro fa-solid fa-moon"></i>
+                <div class="iconos-fijos">
+                    <i class="container-icons__icon modo-oscuro fa-solid fa-moon"></i>
+
+                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping icono__carrito"
+                        id="icono-carrito"></i>
+                </div>
+
+
 
                 <div class="navbar__container-icons">
-                    <i class="icons-zindex container-icons__icon fa-solid fa-cart-shopping" id="icono-carrito"></i>
                     <i class="icons-zindex container-icons__icon fa-solid fa-magnifying-glass"></i>
-                    <a href="pages/login.html">
+                    <a href="../pages/login.html">
 
                         <i class="icons-zindex container-icons__icon fa-solid fa-user"></i>
                     </a>
